--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@ const cities = [];
 
 fetch(endpoint)
     .then(blob => blob.json())
-    .then(data => cities.push(...data));
+    .then(data => cities.push(...data))
 
 function findMatches(wordToMatch, cities) {
     return cities.filter(place => {
         //here we need to figure out if city or state matches what was searched
-        
+        const regex = new RegExp(wordToMatch, 'gi');
+        return place.city.match(regex) || place.state.match(regex);
     });
 }
     
