Mapped new array

--- a/index.html
+++ b/index.html
@@ -32,12 +32,23 @@ function findMatches(wordToMatch, cities) {
 }
 function displayMatches() {
     console.log(this.value);
+    const matchedArray = findMatches(this.value, cities);
+    const html = matchedArray.map(place => {
+        return `
+            <li>
+                <span class="name">${place.city}, ${place.state}</span>
+                <span class="population">${place.population}</span>
+            </li>
+            `;
+    }).join('');
+        suggestions.innerHTML = html;
 }
 
 const searchInput = document.querySelector('.search');
 const suggestions = document.querySelector('.suggestions');
 
 searchInput.addEventListener('change', displayMatches);
+searchInput.addEventListener('keyup', displayMatches);
     
 
 </script>
